# Proyecto-de-fin-de-modulo-6---Alfaro-Badillo-Cruz-Perez-Rupit

./: .gitignore  Modulo-VI-Equipo-15-Habits  Modulo_VI_Equipo_15_Habits.ipynb  Modulo_VI_Equipo_15_Habits_C.ipynb  Modulo_VI_Equipo_15_Habits_E.ipynb  Modulo_VI_Equipo_15_Habits_EDA.ipynb  Modulo_VI_Equipo_15_Habits_KMeans.ipynb  Modulo_VI_Equipo_15_Habits_L.ipynb  Modulo_VI_Equipo_15_Habits_P1Casandra.ipynb  README.md  df_habits_processed.csv  habits - habits.csv  pyproject.toml
