[project]
name = "aprendizajenosupervisado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.11.0",
    "numba>=0.66.0",
    "numpy<2.5",
    "pandas>=3.0.3",
    "pynndescent>=0.6.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.12",
]
